Make design for control program and add 2 rectangles on main screen

--- a/IPP_Lb2/Windows/MainWindow.resx
+++ b/IPP_Lb2/Windows/MainWindow.resx
@@ -117,4 +117,102 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcI
+        CQsJCAgKCAcHCg0KCgsMDAwMBwkODw0MDgsMDAz/2wBDAQICAgMDAwYDAwYMCAcIDAwMDAwMDAwMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAz/wAARCACbAQIDASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwD5rooor8DP9oAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKK8f+KX7cfgT4Wa6dNkuL3WruIlZ10uNJlt2H8LOzquexAJIIOcV0YbC1sRPkox
+        cn5HiZ9xJleS4f61m1eNGF7Jydrvsurfkr6ansFFcf8ABL436P8AHvwlJrGix30NvDcNayR3capIjgK3
+        8LMMYYdDXYVFajOlN06is10OzLMzwmY4WGOwNRVKU1eMls0FFFFZHeFFFFABRRRQAUUUUAFFFFABRRRQ
+        AUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABXPfE74qaH8H/AAvJq+vXqWlqp2ovWS4fBIRF
+        6sxwf5nAGa6GvI/2tv2ddQ/aK0TQrKwv7PTxp940s73Csf3bJglQBywIHBIHPUYrqwcKU68YV5csG9X5
+        HznFuNzTCZPXxGS0VVxKXuQezk2lrqtt91tufM/x6/bd8TfGi7fSPDy3WiaNcN5KwW5zeXuTgB2XkZ6b
+        E45IJavJfiB8NNa+F2oWlprtk+n3d7areJBIRvWNmdRuA+6coeDz0zX6D/A79lrwr8CLVX0+1+26sVxJ
+        qV0A07Z6heyL7L+JNfL/APwUr/5L3p3/AGA4f/R89foGT5thnio4LA07Q1u3u7L+t/wP4o8VPDXPqHD9
+        Tivi7GOri3KEY04/BTUnqu3yglFO7vK9z13/AIJo/wDJEdV/7DMn/omGvoqvnX/gmj/yRHVf+wzJ/wCi
+        Ya+iq+Q4i/5GNX1/RH9T+Cf/ACQ+Xf4P/bpBRRRXiH6mFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFF
+        ABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAV8Mf8FK/+S96d/wBgOH/0fPX3PXwx/wAFK/8Akven
+        f9gOH/0fPX0vCf8AyMY+j/I/n76TH/JEVP8Ar5T/ADPXf+CaP/JEdV/7DMn/AKJhr6Kr51/4Jo/8kR1X
+        /sMyf+iYa+iq5eIv+RjV9f0R9d4J/wDJD5d/g/8AbpBRRRXiH6mFFFFABRRRQAUUUUAFFFFABRRRQAUU
+        UUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAV8Mf8ABSv/AJL3p3/YDh/9Hz19z18Mf8FK
+        /wDkvenf9gOH/wBHz19Lwn/yMY+j/I/n76TH/JEVP+vlP8z13/gmj/yRHVf+wzJ/6Jhr6Kr51/4Jo/8A
+        JEdV/wCwzJ/6Jhr6Krl4i/5GNX1/RH13gn/yQ+Xf4P8A26QUUUV4h+phRRRQAUUUUAFFFFABRRRQAUUU
+        UAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAV5n+1H+0N/wzp4MstSj00apcX92LaOJpvKV
+        RtZixOD6Yx7+1emVz/xJ+FegfF7Qk03xFp0epWccomRGkeMo4BAIZCGHBI4POa6MLKlGtGVdXhfVLseD
+        xPhs0xGVV6OS1VSxMo2hKSuoy7vSX/pLtvZny5/w9D1H/oULL/wYN/8AEV4p+0X8dpv2hfHNvrc+nR6Y
+        8Fkln5UcxlDBXd92SB/f6e1faf8Awwt8K/8AoVv/ACpXn/x2j/hhb4V/9Ct/5Urz/wCO19jhc5yXDVPa
+        0KMlL+u8j+W+I/CfxYz7BPLs2zTD1KTafLqtVtrHDp/ifK/7OX7ZF3+zz4MutHg0K31RLm8a7MslyYip
+        KIuMBT/c/WvTfDn/AAU0utV8Q2Nrc+FLaG3ubiOKWRL5mZFZgCQNnJAPSvW/+GFvhX/0K3/lSvP/AI7V
+        nSP2Kvhloeq217beGFW4tJVmiZr+6kUMpBBKtIVPI6EEVGJzbI69R1atGTk/6/mO/IPDbxcyjDUcvwWa
+        4eFCnoo6uyvdrXD3fXd/M9Sooor4k/rMKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooA
+        KKKKACiiigAooooAKKKKAP/Z
+</value>
+  </data>
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEAYABgAAD/2wBDAAIBAQIBAQICAgICAgICAwUDAwMDAwYEBAMFBwYHBwcGBwcI
+        CQsJCAgKCAcHCg0KCgsMDAwMBwkODw0MDgsMDAz/2wBDAQICAgMDAwYDAwYMCAcIDAwMDAwMDAwMDAwM
+        DAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAz/wAARCACbAQIDASIAAhEBAxEB/8QA
+        HwAAAQUBAQEBAQEAAAAAAAAAAAECAwQFBgcICQoL/8QAtRAAAgEDAwIEAwUFBAQAAAF9AQIDAAQRBRIh
+        MUEGE1FhByJxFDKBkaEII0KxwRVS0fAkM2JyggkKFhcYGRolJicoKSo0NTY3ODk6Q0RFRkdISUpTVFVW
+        V1hZWmNkZWZnaGlqc3R1dnd4eXqDhIWGh4iJipKTlJWWl5iZmqKjpKWmp6ipqrKztLW2t7i5usLDxMXG
+        x8jJytLT1NXW19jZ2uHi4+Tl5ufo6erx8vP09fb3+Pn6/8QAHwEAAwEBAQEBAQEBAQAAAAAAAAECAwQF
+        BgcICQoL/8QAtREAAgECBAQDBAcFBAQAAQJ3AAECAxEEBSExBhJBUQdhcRMiMoEIFEKRobHBCSMzUvAV
+        YnLRChYkNOEl8RcYGRomJygpKjU2Nzg5OkNERUZHSElKU1RVVldYWVpjZGVmZ2hpanN0dXZ3eHl6goOE
+        hYaHiImKkpOUlZaXmJmaoqOkpaanqKmqsrO0tba3uLm6wsPExcbHyMnK0tPU1dbX2Nna4uPk5ebn6Onq
+        8vP09fb3+Pn6/9oADAMBAAIRAxEAPwDLooor8XP4DCiiigAooooAKKKKACiiigAooooAKKKKACiiigAo
+        oooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAo
+        oooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKKACiiigAo
+        oooAKKKKACiiigAoorzf4i/tf/DH4USzRa5430C2ubdzHNbQ3H2q5iYdQ0UW5wfqtaU6c6j5YJt+R1YX
+        BYjFT9nhqcpy7RTb+5HpFFeH6N/wUj+Ceu36W0Hjq1SRzgG4sLu2jH1eSJVH4mvYPC/i7SvG+jx6houp
+        6fq9hNny7myuEuIXx1w6Eg/nV1cLWpa1YOPqmjbG5TjsHZ4yjOnf+aLj+aRoUUUVgeeFFFFABRRRQAUU
+        UUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQB+Z3/BR/wDa/wDHHij4
+        4a78P9KvrrSvD+lTLY/ZLBmSXUnKKWMrL8zAsxAQfLjGQTzXD/DH/gmF8XviXYrdNoVv4dtpE3xvrVx9
+        md/YxKGlU/76LX6d6T8BPB2ifE/UvGlt4fsF8Uatt+06iyl5TtRUG3cSI/lVQdgG7GTk111fS08/WHw8
+        aOFgk7K7fV9f6f3I/XKfij/Z2BpYHJMPGnaK5pSV25WV3ZPv1bba6I/JH4wf8E0vit8HNBk1SfSbPXNP
+        t42luJtIuPtBt1AyS0bKshGMnKqQMHOK82+Bf7QXir9nPxlHrXhbU5bKXcv2i3Ylra+QZ/dzR9GXk+65
+        ypU81+29fkF/wUR+E1j8Hf2r/EdhpcMVrpt/5ep28Ea7Ug85dzqo6BRJvwBgAYAGBXs5LnU8ZN4bExTu
+        u2/dNH3vAfHE+I3VyrNqcZPlvtpJXSaad9dVa36a/qZ8AfjRp37Qfwi0XxbpamK31WHdJAxy1rKpKyRE
+        4GdrhhnAyACOCK7Gvjn/AIIv69Pe/AfxNp8jM0NjrfmRZOdnmQx5A9BlM/Umvsavkc0wscPi50YbJ6ej
+        1PwTijK4Zbm1fA0/hhJ29N1+DCiiivPPBCiiigAooooAKKKKACiiigAooooAKKKKACiiigAooooAKKKK
+        ACiiigAooooAKKKKACiiigAooooAK/Ib/go/8Q4PiN+2B4rntXMltpkkelo27I3QIEkx7eYHr9Ff24v2
+        n7b9l74JXmopIp8Qaqr2WjQd2nK8ykf3Iwdx99q/xCvyq+B/wf1r9o74u6b4b0zfLfatOWuLmQFxbx/e
+        lnkPooyevJwOpFfXcLYS0pYyppFK3+b+S/M/d/CDKfqtOvn+L92mouKb7LWb9FZL710P0M/4I+eB5PDf
+        7L11qssZU+IdYnuImI+/FGqQj/x9Ja+rayPh/wCB7D4Z+B9J8PaVGYtO0W0js7dTjdsRQoLEAZY4yT3J
+        JrXr57McV9YxM6y2b09On4H5Bn+af2jmVfHWspybXkui+SsFFFFcR44UUUUAFFFFABRRRQAUUUUAFFFF
+        ABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFcv8Y/jDoPwI+Ht/4l8R3f2TTbBegG6Sdz92
+        KNf4nY8AfUkgAkXfiP8AEbRvhN4J1DxDr99Fp+k6ZEZZ5pD+AVR1ZmOAqjkkgDk1+Sn7Xn7WWvfth/E5
+        JBFcwaLbSmDRdJjyzKGOAzKM7pn4zjPZRwOfWynKqmNqWWkVu/0XmfecDcFVs9xPPU92hD4pf+2rz/Ja
+        voni/H746+KP2w/jR/aV1DNNdX8y2WkaVb5kFsjNiOCMYyzEkZOMsxPA4A/R79gD9i+D9lb4fPd6okU3
+        jPXY1bUZRhxZoOVto29AeWI4ZgOoVa5X/gnj/wAE/wCD4AaVD4u8WW0U/je8jzBCxDpokTDlV7GYgkMw
+        6A7V43FvqyvTzrNafJ9RwekFvbr5Ly7vq/x9/wAQeNaGIprI8ntHDU7JtbStsl/dXf7T17NlFFFfLH5I
+        FFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQB+TX/B
+        Q39r7U/2jfipdaPA7W3hPwxeS29jbKxxdSKSjXMnqxwdv91TgcsxM37B3xi+Ev7PetP4p8Z2+v6p4ohc
+        rp0VtZJJbaemMGXLSKWlOSBxhR05PH0B49/4Iv2nirxtq2p2HxBl0201C7kuYrWTRPtDW4di2zzPtC7s
+        Z67RWR/w5B/6qd/5bn/3VX3tHMcsWDWF9o4q2tk7+etuvU/phcVcHSyiOURxMqdOyTUY1E/NN8j3fxd+
+        9memf8PhvhP/AM+vi/8A8F8X/wAdo/4fDfCf/n18X/8Agvi/+O15n/w5B/6qd/5bn/3VR/w5B/6qd/5b
+        n/3VXnexyL/n4/8Ayb/5E+S+oeHH/QTP7qn/AMrPePgj/wAFJfhx8eviRY+FtI/t211PUg/2Y31oscUj
+        IhcpuV2wSqtjIwcYzkgH36vkT9mr/glLB+z98aNH8Xz+N5Nb/sZpJIrRNI+y73aNkBL+c/A3E4xzgc19
+        d14uZxwcai+pNtW1vff5pH55xZRyWnjIxyKbnS5Vdu/xXd91F7W6BRRRXmny4UUUUAFFFFABRRRQAUUU
+        UAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUU
+        UAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUU
+        UAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQAUUU
+        UAFFFFABRRRQAUUUUAFFFFABRRRQAUUUUAFFFFABRRRQB//Z
+</value>
+  </data>
 </root>
